@@ -2,16 +2,14 @@ package com.testmaster.service.impl;
 
 import com.testmaster.model.*;
 import com.testmaster.repository.UserTestRepository;
-import com.testmaster.service.impl.TestServiceImpl;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-import org.mockito.stubbing.Answer;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -27,66 +25,31 @@ class TestServiceImplTest {
 
   @BeforeEach
   void setUp() {
-    MockitoAnnotations.initMocks(this);
+    MockitoAnnotations.openMocks(this);
   }
 
+  @DisplayName("getAvailableTests should return available tests")
   @Test
   void getAvailableTests_shouldReturnAvailableTests() {
-//    List<String> testNames = Arrays.asList("Test1", "Test2");
-//    when(userTestRepositoryMock.getTestsNames()).thenReturn(testNames);
-//
-//    List<String> availableTests = testService.getAvailableTests();
-//
-//    assertEquals(testNames, availableTests);
-//    verify(userTestRepositoryMock).getTestsNames();
+    List<String> testNames = Arrays.asList("Test1", "Test2");
+    when(userTestRepositoryMock.getTestsNames()).thenReturn(testNames);
+
+    List<String> availableTests = testService.getAvailableTests();
+
+    assertEquals(testNames, availableTests);
+    verify(userTestRepositoryMock).getTestsNames();
   }
 
+  @DisplayName("getTestByName should return test by valid name")
   @Test
-  void getTestByName_shouldReturnTestByName() {
-//    String testName = "Test1";
-//    UserTest userTest = new UserTest(testName, Collections.emptyList());
-//    when(userTestRepositoryMock.getTestByName(testName)).thenReturn(userTest);
-//
-//    UserTest result = testService.getTestByName(testName);
-//
-//    assertEquals(userTest, result);
-//    verify(userTestRepositoryMock).getTestByName(testName);
-  }
+  void getTestByName_shouldReturnTestByValidName() {
+    String testName = "Test1";
+    UserTest userTest = new UserTest(testName, List.of());
+    when(userTestRepositoryMock.getTestByName(testName)).thenReturn(userTest);
 
-  @Test
-  void submitAnswer_ValidAnswer() {
-//    Option opt1 = new Option("Option1");
-//    Option opt2 = new Option("Option2");
-//    opt2.setCorrect(true);
-//
-//    Question question = new Question("Question1", List.of(opt1, opt2));
-//    Answer answer = new Answer(1);
-//    TestResult testResult = new TestResult();
-//
-//    testService.submitAnswer(question, answer, testResult);
-//
-//    assertEquals(1, testResult.getNumberOfCorrectAnswer());
-  }
+    UserTest result = testService.getTestByName(testName);
 
-  @Test
-  void submitAnswer_InvalidAnswer() {
-//    Question question = new Question("Question1", Collections.emptyList());
-//    Answer answer = new Answer(0); // Invalid answer index
-//    TestResult testResult = new TestResult();
-//
-//    assertThrows(IllegalArgumentException.class,
-//        () -> testService.submitAnswer(question, answer, testResult));
-//    assertEquals(0, testResult.getNumberOfCorrectAnswer());
-  }
-
-  @Test
-  void submitAnswer_NullQuestion() {
-//    Question question = null;
-//    Answer answer = new Answer(0);
-//    TestResult testResult = new TestResult();
-//
-//    assertThrows(IllegalArgumentException.class,
-//        () -> testService.submitAnswer(question, answer, testResult));
-//    assertEquals(0, testResult.getNumberOfCorrectAnswer());
+    assertEquals(userTest, result);
+    verify(userTestRepositoryMock).getTestByName(testName);
   }
 }
